<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FTPApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app">应用</string>
    <string name="picture">图片</string>
    <string name="video">影音</string>
    <string name="file">文件</string>
    <string name="service_list">服务器列表</string>
    <string name="service_login">登录服务器</string>
    <string name="service_logout">注销服务器</string>
    <string name="title_activity_service_list">ServiceListActivity</string>
    <string name="title_activity_server_files">ServerFilesActivity</string>
    <string name="host">地址</string>
    <string name="port">端口</string>
    <string name="username">账户</string>
    <string name="password">密码</string>
    <string name="trans_list">传输列表</string>
    <string name="back">返回</string>
    <string name="more">更多</string>
    <string name="photo">相册</string>
    <string name="music">音乐</string>
    <string name="mp4">视频</string>
    <string name="loading">加载中</string>
    <string name="file_category">文件分类</string>
    <string name="file_total">全部文件</string>
    <string name="connect">连接</string>
    <string name="login">登录</string>
    <string name="connect_phone">连接手机</string>
    <string name="transfer">传输</string>
    <string name="title_activity_operation">OperationActivity</string>
    <string name="cancel">取消</string>
    <string name="title_activity_picture_storage">PictureStorage</string>
    <string name="title_activity_more_operation">MoreOperation</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_my_server">MyServerActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_server_msg">ServerMsgActivity</string>

</resources>