<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        xmlns:weiwei="http://schemas.android.com/apk/res/org.weiwei.ftpapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

<!--    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/service_list"
            android:textSize="22sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000" />
 --> 
     <org.weiwei.ui.view.TopBar
        android:id="@+id/id_server_list_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        weiwei:leftBackground="@drawable/back_click"
        weiwei:titleTextColor="#000"
        weiwei:titleTextSize="11sp"
        weiwei:title="@string/service_list"
        weiwei:lineBackground="@color/grey"
        weiwei:lineHeight="1dp" >
    </org.weiwei.ui.view.TopBar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/id_service_list_ll_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/service_login" />
        </LinearLayout>

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/id_service_list_ll_trans_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/trans_list" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    
    <ListView
        android:id="@+id/id_service_list_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

</LinearLayout>