<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical" >

    <include layout="@layout/title_top" />

    <org.weiwei.ui.view.MainViewPager
        android:id="@+id/id_main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </org.weiwei.ui.view.MainViewPager>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#fff"
        android:baselineAligned="false" >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/id_activity_main_bottom_left_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/btn_more_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="25dp"
                android:text="@string/more" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="98dp"
            android:layout_gravity="bottom"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/id_activity_main_bottom_center_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/main_bottom_center_menu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/connect_phone" >
            </TextView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0" >

            <ImageView
                android:id="@+id/id_activity_main_bottom_right_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="7dp"
                android:src="@drawable/btn_share_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="@string/transfer" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>